fixed image spacing

--- a/style.css
+++ b/style.css
@@ -22,8 +22,6 @@ h1{margin: 4rem 0 1rem; border-bottom: dotted var(--jelo-5) 3px;
 .split{display: grid; grid-template-columns:auto minmax(0, 30rem) minmax(1rem, 7vw) minmax(0, 12rem) auto;
     grid-auto-flow: dense; gap: 1rem 0; padding: 0 1rem;
 }
-section.split{margin-bottom: 2rem}
-
 section.split > p{margin: 0}
 h1.split > p {margin: 1rem 0}
 
@@ -38,7 +36,7 @@ h1.split > p {margin: 1rem 0}
 
 a{color: var(--lupa)}
 
-img{width: 100%; max-width: calc(42rem + 7vw); margin-bottom: 0 auto 2rem; display: block}
+img{width: 100%; max-width: calc(42rem + 7vw); margin: 0 auto 2rem; display: block}
 
 @media (width < 800px) {
     .split{padding: 0 6vw}}
